Adapt to lisungi.org

--- a/templates/admin/map/fr_FR/helpers_department.svg.twig
+++ b/templates/admin/map/fr_FR/helpers_department.svg.twig
@@ -15,6 +15,6 @@
         <tspan x="95" y="584" fill="#2B2B2B"></tspan>
         <tspan x="95" y="640" fill="#2B2B2B">Demandez de l'aide aux volontaires du {{ department }} pour garder vos </tspan>
         <tspan x="95" y="696" fill="#2B2B2B">enfants ou faire vos courses sur </tspan>
-        <tspan x="692.375" y="696" fill="#004AAD">enpremiereligne.fr</tspan>
+        <tspan x="692.375" y="696" fill="#004AAD">lisungi.org</tspan>
     </text>
 </svg>
