--- a/templates/content/en_NZ/international.html.twig
+++ b/templates/content/en_NZ/international.html.twig
@@ -46,12 +46,12 @@
 
     <p>
         If you want to be part of our tech network to fight the virus, feel free to contact us
-        on <a href="mailto:tech@enpremiereligne.fr">tech@enpremiereligne.fr</a> for any further information.
+        on <a href="mailto:tech@lisungi.org">tech@lisungi.org</a> for any further information.
     </p>
 
     <p>
         If you want to launch a similar initiative in your country, feel free to contact us at
-        <a href="mailto:world@enpremiereligne.fr">world@enpremiereligne.fr</a>.
+        <a href="mailto:world@lisungi.org">world@lisungi.org</a>.
     </p>
 </div>
         </div>
