--- a/templates/content/en_NZ/who.html.twig
+++ b/templates/content/en_NZ/who.html.twig
@@ -12,7 +12,7 @@
             Steve Winter : <a href="mailto:steve@thecommunitywave.nz">steve@thecommunitywave.nz</a></li></ul><p>Emmanuel is based in Auckland, and Steve is currently working in the UK.<span style="font-size: 1.25rem; font-weight: 700;"><br></span></p><p><span style="font-size: 1.25rem; font-weight: 700;">To contact the project team please email:</span><br></p>
 
     <p>
-        <a href="mailto:team@thecommunitywave.nz">team@thecommunitywave.nz</a></p><p><span style="font-size: 1rem;">This site is based on an international project:&nbsp;</span><a href="https://enpremiereligne.fr/" target="_blank" style="font-size: 1rem; background-color: rgb(255, 255, 255);">En première ligne</a><span style="font-size: 1rem;">&nbsp;</span><br></p>
+        <a href="mailto:team@thecommunitywave.nz">team@thecommunitywave.nz</a></p><p><span style="font-size: 1rem;">This site is based on an international project:&nbsp;</span><a href="https://lisungi.org/" target="_blank" style="font-size: 1rem; background-color: rgb(255, 255, 255);">En première ligne</a><span style="font-size: 1rem;">&nbsp;</span><br></p>
 </div>
         </div>
     </div>
