--- a/templates/content/fr_FR/legalities.html.twig
+++ b/templates/content/fr_FR/legalities.html.twig
@@ -14,13 +14,13 @@
 
                 <ul>
                     <li>
-                        Titouan Galopin : <a href="mailto:titouan@enpremiereligne.fr">titouan@enpremiereligne.fr</a>
+                        Titouan Galopin : <a href="mailto:titouan@lisungi.org">titouan@lisungi.org</a>
                     </li>
                     <li>
-                        Adrien Duguet : <a href="mailto:adrien@enpremiereligne.fr">adrien@enpremiereligne.fr</a>
+                        Adrien Duguet : <a href="mailto:adrien@lisungi.org">adrien@lisungi.org</a>
                     </li>
                     <li>
-                        Gregory Grellet : <a href="mailto:gregory@enpremiereligne.fr">gregory@enpremiereligne.fr</a>
+                        Gregory Grellet : <a href="mailto:gregory@lisungi.org">gregory@lisungi.org</a>
                     </li>
                 </ul>
 
@@ -29,7 +29,7 @@
                 </h5>
 
                 <p>
-                    Titouan Galopin : <a href="mailto:titouan@enpremiereligne.fr">titouan@enpremiereligne.fr</a>
+                    Titouan Galopin : <a href="mailto:titouan@lisungi.org">titouan@lisungi.org</a>
                 </p>
 
                 <h5 class="font-weight-bold mt-4">
