--- a/templates/content/fr_FR/privacy.html.twig
+++ b/templates/content/fr_FR/privacy.html.twig
@@ -9,19 +9,19 @@
 
             <div class="process-details">
                 <p>
-                    Le Responsable de Traitement de enpremiereligne.fr est Titouan Galopin
-                    (<a href="mailto:titouan@enpremiereligne.fr">titouan@enpremiereligne.fr</a>).
+                    Le Responsable de Traitement de lisungi.org est Titouan Galopin
+                    (<a href="mailto:titouan@lisungi.org">titouan@lisungi.org</a>).
                 </p>
 
                 <p>
-                    En accord avec le Règlement Général sur la Protection des Données, enpremiereligne.fr
+                    En accord avec le Règlement Général sur la Protection des Données, lisungi.org
                     collecte des données uniquement à des fins de mise en relation de personnes à visée
                     d'entraide.
                 </p>
 
                 <p>
-                    Les données collectées par enpremiereligne.fr sont uniquement celles renseignées par les
-                    utilisateurs du site internet enpremiereligne.fr. Aucune autre donnée personnelle n'est
+                    Les données collectées par lisungi.org sont uniquement celles renseignées par les
+                    utilisateurs du site internet lisungi.org. Aucune autre donnée personnelle n'est
                     collectée, notamment grâce à l'utilisation
                     <a href="https://usefathom.com/data">d'une technologie anonyme et sans cookie de mesure d'usage</a>.
                 </p>
@@ -30,7 +30,7 @@
                     Les données collectées dans le cadre du traitement de mise en relation de personnes à
                     des visées d'entraidre sont utilisées uniquement pour cet objectif. Elles sont supprimées
                     automatiquement 1 mois après la mise en relation, ou sur simple demande à
-                    <a href="mailto:titouan@enpremiereligne.fr">titouan@enpremiereligne.fr</a>.
+                    <a href="mailto:titouan@lisungi.org">titouan@lisungi.org</a>.
                 </p>
 
                 <p>
@@ -44,7 +44,7 @@
                     Vous disposez d'un droit d'accès, de rectification, d’effacement et de portabilité
                     de vos données ainsi que d’un droit d'opposition et d'un droit de limitation du
                     traitement des données vous concernant. Vous pouvez exercer vos droits en nous
-                    contactant à l'adresse suivante : <a href="mailto:titouan@enpremiereligne.fr">titouan@enpremiereligne.fr</a>.
+                    contactant à l'adresse suivante : <a href="mailto:titouan@lisungi.org">titouan@lisungi.org</a>.
                 </p>
             </div>
         </div>
