--- a/templates/emails/fr_FR/asso_entourage.html.twig
+++ b/templates/emails/fr_FR/asso_entourage.html.twig
@@ -3,7 +3,7 @@
 </p>
 
 <p>
-    Vous êtes nombreux à vous être inscrits sur la plateforme enpremiereligne.fr, MERCI pour votre engagement !
+    Vous êtes nombreux à vous être inscrits sur la plateforme lisungi.org, MERCI pour votre engagement !
 </p>
 
 <p>
