--- a/templates/emails/fr_FR/invite.html.twig
+++ b/templates/emails/fr_FR/invite.html.twig
@@ -10,7 +10,7 @@
 </p>
 
 <p>
-    Sur <a href="https://enpremiereligne.fr">enpremiereligne.fr</a>,
+    Sur <a href="https://lisungi.org">lisungi.org</a>,
     vous pourrez trouver plus de {{ countTotalHelpers|number_format(0, ',', ' ') }}
     volontaires prêts à vous aider gratuitement.
 </p>
@@ -23,7 +23,7 @@
 {% endif %}
 
 <p>
-    Vous avez besoin d’aide ? Rendez-vous sur <a href="https://enpremiereligne.fr">enpremiereligne.fr</a> !
+    Vous avez besoin d’aide ? Rendez-vous sur <a href="https://lisungi.org">lisungi.org</a> !
 </p>
 
 <p>
@@ -35,7 +35,7 @@
 </p>
 
 <p>
-    <a href="https://enpremiereligne.fr">enpremiereligne.fr</a>
+    <a href="https://lisungi.org">lisungi.org</a>
     <br />
     <a href="https://www.facebook.com/en1ereligne">Facebook</a>
     <br />
