--- a/templates/_include/footer.html.twig
+++ b/templates/_include/footer.html.twig
@@ -1,7 +1,7 @@
 <footer class="home-footer p-3">
     <div class="mb-3 home-footer-social">
         {% include '_include/' ~ app.request.locale ~ '/homepage_social.html.twig' %}
-        <a href="https://github.com/tgalopin/enpremiereligne.fr"
+        <a href="https://github.com/tgalopin/lisungi.org"
            title="{% trans %}social.find-github{% endtrans %}" target="_blank" rel="noreferrer noopener">
             {{ include('_icons/github.html.twig') }}</a>
     </div>
