--- a/templates/content/fr_FR/who.html.twig
+++ b/templates/content/fr_FR/who.html.twig
@@ -9,18 +9,18 @@
 
             <div class="process-details">
                 <p>
-                    Le projet enpremiereligne.fr est à l'initiative de :
+                    Le projet lisungi.org est à l'initiative de :
                 </p>
 
                 <ul>
                     <li>
-                        Titouan Galopin : <a href="mailto:titouan@enpremiereligne.fr">titouan@enpremiereligne.fr</a>
+                        Titouan Galopin : <a href="mailto:titouan@lisungi.org">titouan@lisungi.org</a>
                     </li>
                     <li>
-                        Adrien Duguet : <a href="mailto:adrien@enpremiereligne.fr">adrien@enpremiereligne.fr</a>
+                        Adrien Duguet : <a href="mailto:adrien@lisungi.org">adrien@lisungi.org</a>
                     </li>
                     <li>
-                        Gregory Grellet : <a href="mailto:gregory@enpremiereligne.fr">gregory@enpremiereligne.fr</a>
+                        Gregory Grellet : <a href="mailto:gregory@lisungi.org">gregory@lisungi.org</a>
                     </li>
                 </ul>
 
@@ -29,7 +29,7 @@
                 </h5>
 
                 <p>
-                    <a href="mailto:team@enpremiereligne.fr">team@enpremiereligne.fr</a>
+                    <a href="mailto:team@lisungi.org">team@lisungi.org</a>
                 </p>
             </div>
         </div>
