--- a/templates/content/fr_FR/why.html.twig
+++ b/templates/content/fr_FR/why.html.twig
@@ -4,7 +4,7 @@
     <div class="process-box">
         <div class="bg-light p-3 p-lg-4">
             <h3 class="text-center font-weight-bold mb-4">
-                Pourquoi avons-nous lancé enpremiereligne.fr ?
+                Pourquoi avons-nous lancé lisungi.org ?
             </h3>
 
             <div class="process-details">
