--- a/templates/page_base.html.twig
+++ b/templates/page_base.html.twig
@@ -10,7 +10,7 @@
             </h1>
 
             <a href="{{ path('homepage') }}">
-                <img src="{{ asset(localized_assets_folder ~ 'res/logo.svg') }}" class="process-logo" alt="{% trans %}site.name{% endtrans %}" />
+                <img src="{{ asset(localized_assets_folder ~ 'res/logo.png') }}" class="process-logo" alt="{% trans %}site.name{% endtrans %}" />
             </a>
 
             <div class="mt-2">
